[project]
name = "example_package_calv2n"
version = "0.0.1"
authors = [
  { name="Calvin Carter", email="calv2n@berkeley.edu" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/calv2n/sampleproject"
Issues = "https://github.com/calv2n/sampleproject/issues"